--- a/adder/samjones/build.gradle
+++ b/adder/samjones/build.gradle
@@ -6,9 +6,11 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    compile 'org.apache.commons:commons-lang3:3.1'
 }
