returns 0 for empty string

--- a/data-munging/jakejgordon/katas/Katas.csproj
+++ b/data-munging/jakejgordon/katas/Katas.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdderKata\Adder.cs" />
+    <Compile Include="AdderKata\AdderTests.cs" />
     <Compile Include="Kata04\Kata04.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,6 +61,7 @@
     <Compile Include="Kata04\Kata04Tests.cs" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
