--- a/adder/shah/build.gradle
+++ b/adder/shah/build.gradle
@@ -6,7 +6,9 @@ repositories {
     jcenter()
 }
 
-sourceCompatibility = '1.7'
+idea {
+    sourceCompatibility = '1.7'
+}
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12'
