--- a/data-munging/jakejgordon/katas/packages/repositories.config
+++ b/data-munging/jakejgordon/katas/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\..\..\adder\jakejgordon\AdderKata\packages.config" />
+  <repository path="..\..\..\..\adder_new_lang\jakejgordon\AdderNewLanguage\packages.config" />
   <repository path="..\packages.config" />
 </repositories>
