--- a/adder_new_lang/samjones/calculator/Rakefile
+++ b/adder_new_lang/samjones/calculator/Rakefile
@@ -7,4 +7,6 @@ RSpec::Core::RakeTask.new(:spec) do |t|
 	t.pattern = Dir.glob('spec/**/*_spec.rb')
 	t.rspec_opts = '--format documentation'
  end
- task :default => :spec
+
+task :install => :spec
+
