--- a/ui_calculator/samjones/uicalc/Gemfile
+++ b/ui_calculator/samjones/uicalc/Gemfile
@@ -35,6 +35,11 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+
+	# rspec for testing
+	gem 'rspec-rails'
+	# Use sqlite3 as the database for Active Record
+	gem 'sqlite3'
 end
 
 group :development do
@@ -45,3 +50,7 @@ group :development do
   gem 'spring'
 end
 
+group :production do
+  gem 'pg'
+  gem 'rails_12factor'
+end
