--- a/trigrams/samjones/haskellFP/trigrams/trigrams.cabal
+++ b/trigrams/samjones/haskellFP/trigrams/trigrams.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Data.String.Strip
                      , Trigrams
   build-depends:       base >= 4.7 && < 5
+                     , containers
   default-language:    Haskell2010
 
 executable trigrams
@@ -33,6 +34,7 @@ test-suite trigrams-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , containers
                      , trigrams
                      , hspec
                      , QuickCheck
